# jguida941

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
contracts/: correction_baseline.json  dashboard_surface.json  doc_authority_policy.toml  dom_cover.json  orchestration_exchange_policy.json  page_manifest.json  process_docs_currency_policy.toml  reference_aspects.json  rendered_fact_policy.json  reorient_policy.toml  repo_layout.json
dev/: README.md
docs/: DESIGN_AUDIT.md  DESIGN_SPEC.md  PIPELINE_CLI.md
game/: app.js  data.json  index.html  package-lock.json  package.json  styles.css  tsconfig.json
scripts/: actions_audit.py  branch_protection.py  build_readme.py  card_theme.py  collect_data.py  compute_metrics.py  config.py  contracts.py  diagnostics.py  generate_activity_heatmap.py  generate_badges.py  generate_builder_scorecard.py  generate_contribution_panel.py  generate_currently_working.py  generate_engineering_cadence.py  generate_focus_board.py  generate_game_card.py  generate_language_chart.py  generate_metrics_general.py  generate_playable_game_data.py  generate_repo_spotlight.py  generate_snapshot_panel.py  generate_streak_summary.py  gh_cli.py  github_cache.py  github_client.py  github_graphql.py  github_transport.py  glass_kit.py  metrics_svg.py  profile_cli.py  profile_contract.py  profile_helpers.py  profile_pipeline.py  render_outputs.py  runtime_env.py  settings.py  severity.py  svg_utils.py  triage.py  (+1 more)
site/: index.html  settings.html  showcase.html  studio.html
skills/: README.md
templates/: README.md  README.md.tpl
(+442 files in other folders)
