[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "github-profile-stats"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
profile-cli = "scripts.profile_cli:main"

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
